--- a/src/components/poem.styl
+++ b/src/components/poem.styl
@@ -10,35 +10,35 @@
 // ==============================================
 
 .poem-hc
-  text-align: center;
-  margin: 2em 0;
+  text-align: center
+  margin: 2em 0
 
   p
-    margin-bottom: .2em;
+    margin-bottom: .2em
 
     &:before
-      content: none;
+      content: none
 
   .poem-author
-    display: block;
-    text-align: right;
-    font-weight: 800;
+    display: block
+    text-align: right
+    font-weight: 800
 
     &:before
-      content: '——';
+      content: '——'
 
 // Vertical Poem
 // ==============================================
 
 .poem-lr,
 .poem-rl
-  display: block;
-  white-space: pre-line;
-  margin: 2em auto;
-  line-height: 1.4em;
-  letter-spacing: 3px;
-  writing-mode: vertical-rl;
-  -webkit-writing-mode: vertical-rl;
+  display: block
+  white-space: pre-line
+  margin: 2em auto
+  line-height: 1.4em
+  letter-spacing: 3px
+  writing-mode: vertical-rl
+  -webkit-writing-mode: vertical-rl
 
   h1,
   h2,
@@ -47,29 +47,29 @@
   h5,
   h6,
   .poem-title
-    margin: 0;
-    margin-left: -.5em;
-    font-weight: bold;
-    font-family: font-family['serif'];
+    margin: 0
+    margin-left: -.5em
+    font-weight: bold
+    font-family: font-family-serif
 
     &:before
-      content: none;
+      content: none
 
     .poem-author
-      font-size: 60%;
+      font-size: 60%
 
   p
-    margin: 0 -.3em;
-    text-align: left;
-    max-height: 600px;
-    letter-spacing: inherit;
-    word-wrap: break-word;
-    white-space: pre-line;
-    line-height: 1em;
+    margin: 0 -.3em
+    text-align: left
+    max-height: 600px
+    letter-spacing: inherit
+    word-wrap: break-word
+    white-space: pre-line
+    line-height: 1em
 
     &:before
-      content: none;
+      content: none
 
 .poem-lr
-  writing-mode: vertical-lr;
-  -webkit-writing-mode: vertical-lr;
+  writing-mode: vertical-lr
+  -webkit-writing-mode: vertical-lr
