--- a/src/variables.styl
+++ b/src/variables.styl
@@ -6,36 +6,32 @@
 // MIT License                                  ||
 // ===============================================
 
-font-family = {
-  normal: unquote('"Segoe UI", "Lucida Grande", Helvetica, Arial, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans","wenquanyi micro hei","Hiragino Sans GB", "Hiragino Sans GB W3", Arial, sans-serif'),
-  serif: unquote('Georgia, "Times New Roman", Times, SimSun, serif'),
-  kai: unquote('Georgia, "Times New Roman", Times, Kai, "Kaiti SC", KaiTi, BiauKai, serif'),
-  monospace: unquote('"Source Code Pro", Monaco, Menlo, Consolas, "Courier New", monospace')
-}
+font-family-normal    = "Segoe UI", "Lucida Grande", Helvetica, Arial, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans","wenquanyi micro hei","Hiragino Sans GB", "Hiragino Sans GB W3", Arial, sans-serif'
+font-family-serif     = Georgia, "Times New Roman", Times, SimSun, serif'
+font-family-kai       = Georgia, "Times New Roman", Times, Kai, "Kaiti SC", KaiTi, BiauKai, serif
+font-family-monospace = "Source Code Pro", Monaco, Menlo, Consolas, "Courier New", monospace
 
-color = {
-  normal: #222,
-  dark-grey: #888,
-  link: #333,
-  link-grey: #bbb,
+color-normal    = #222
+color-dark-grey = #888
+color-link      = #333
+color-link-grey = #bbb
 
-  primary: #198ac8,
-  secondary: #4eb3e9,
-  success: #19c856,
-  error: #e63752,
-  warning: #e8cB2c,
+color-primary   = #198ac8
+color-secondary = #4eb3e9
+color-success   = #19c856
+color-error     = #e63752
+color-warning   = #e8cB2c
 
-  background-bar: #f7f7f7,
-  background-code: #f7f7f7,
-  background-table: #f7f7f7,
-  background-table-hover: #e8e8e8,
-  background-table-mark: #ffff85,
+color-background-bar   = #f7f7f7
+color-background-code  = #f7f7f7
+color-background-table = #f7f7f7
+color-background-table-hover = #e8e8e8
+color-background-table-mark  = #ffff85
 
-  border-light: #dbdbdb,
-  border-normal: #ddd,
-  border-focus: #888,
-  border-mark: #eaea90
-}
+color-border-light  = #dbdbdb
+color-border-normal = #ddd
+color-border-focus  = #888
+color-border-mark   = #eaea90
 
 // Media queries
 mq-mobile = 'screen and (max-width: 768px)'
