--- a/src/base/normalize.styl
+++ b/src/base/normalize.styl
@@ -3,37 +3,37 @@
 *,
 *:before
 *:after
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box
+  -moz-box-sizing: border-box
+  box-sizing: border-box
 
 /**
  * 1. Set default font family to sans-serif.
  * 2. Prevent iOS and IE text size adjust after device orientation change,
- *    without disabling user: zoom.;
+ *    without disabling user: zoom.
  */
 
 html
-  font-family: sans-serif /* 1: */;
-  -ms-text-size-adjust: 100% /* 2: */;
-  -webkit-text-size-adjust: 100% /* 2: */;
+  font-family: sans-serif /* 1: */
+  -ms-text-size-adjust: 100% /* 2: */
+  -webkit-text-size-adjust: 100% /* 2: */
 
 /**
  * Remove default margin.
  */
 
 body
-  margin: 0;
-  font-size: 105%;
-  font-weight: 400;
-  line-height: 1.88;
-  color: color['normal'];
-  font-family: font-family['normal'];
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin: 0
+  font-size: 105%
+  font-weight: 400
+  line-height: 1.88
+  color: color-normal
+  font-family: font-family-normal
+  -webkit-font-smoothing: antialiased
+  -moz-osx-font-smoothing: grayscale
 
 /** HTML5 display definitions
-   ==========================================================================: */;
+   ==========================================================================: */
 
 /**
  * Correct `block` display not defined for any HTML5 element in IE 8/9.
@@ -55,7 +55,7 @@ menu,
 nav,
 section,
 summary
-  display: block;
+  display: block
 
 /**
  * 1. Correct `inline-block` display not defined in IE 8/9.
@@ -66,8 +66,8 @@ audio,
 canvas,
 progress,
 video
-  display: inline-block /* 1: */;
-  vertical-align: baseline /* 2: */;
+  display: inline-block /* 1: */
+  vertical-align: baseline /* 2: */
 
 /**
  * Prevent modern browsers from displaying `audio` without controls.
@@ -75,8 +75,8 @@ video
  */
 
 audio:not([controls])
-  display: none;
-  height: 0;
+  display: none
+  height: 0
 
 /**
  * Address `[hidden]` styling not present in IE 8/9/10.
@@ -85,17 +85,17 @@ audio:not([controls])
 
 [hidden],
 template
-  display: none;
+  display: none
 
 /* Links
-   ==========================================================================: */;
+   ==========================================================================: */
 
 /**
  * Remove the gray background color from active links in IE 10.
  */
 
 a
-  background-color: transparent;
+  background-color: transparent
 
 /**
  * Improve readability of focused elements when they are also in an
@@ -104,17 +104,17 @@ a
 
 a:active,
 a:hover
-  outline: 0;
+  outline: 0
 
 /* Text-level semantics
-   ==========================================================================: */;
+   ==========================================================================: */
 
 /**
  * Address styling not present in IE 8/9/10/11, Safari, and Chrome.
  */
 
 abbr[title]
-  border-bottom: 1px dotted;
+  border-bottom: 1px dotted
 
 /**
  * Address style set to `bolder` in Firefox 4+, Safari, and Chrome.
@@ -122,14 +122,14 @@ abbr[title]
 
 b,
 strong
-  font-weight: bold;
+  font-weight: bold
 
 /**
  * Address styling not present in Safari and Chrome.
  */
 
 dfn
-  font-style: italic;
+  font-style: italic
 
 /**
  * Address variable `h1` font-size and margin within `section` and `article`
@@ -137,23 +137,23 @@ dfn
  */
 
 h1
-  font-size: 2em;
-  margin: 0.67em 0;
+  font-size: 2em
+  margin: 0.67em 0
 
 /**
  * Address styling not present in IE 8/9.
  */
 
 mark
-  background: #ff0;
-  color: #000;
+  background: #ff0
+  color: #000
 
 /**
  * Address inconsistent and variable font size in all browsers.
  */
 
 small
-  font-size: 80%;
+  font-size: 80%
 
 /**
  * Prevent `sub` and `sup` affecting `line-height` in all browsers.
@@ -161,58 +161,58 @@ small
 
 sub,
 sup
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
+  font-size: 75%
+  line-height: 0
+  position: relative
+  vertical-align: baseline
 
 sup
-  top: -0.5em;
+  top: -0.5em
 
 sub
-  bottom: -0.25em;
+  bottom: -0.25em
 
 /* Embedded content
-   ==========================================================================: */;
+   ==========================================================================: */
 
 /**
  * Remove border when inside `a` element in IE 8/9/10.
  */
 
 img
-  border: 0;
+  border: 0
 
 /**
  * Correct overflow not hidden in IE 9/10/11.
  */
 
 svg:not(:root)
-  overflow: hidden;
+  overflow: hidden
 
 /* Grouping content
-   ==========================================================================: */;
+   ==========================================================================: */
 
 /**
  * Address margin not present in IE 8/9 and Safari.
  */
 
 figure
-  margin: 1em 40px;
+  margin: 1em 40px
 
 /**
  * Address differences between Firefox and other browsers.
  */
 
 hr
-  box-sizing: content-box;
-  height: 0;
+  box-sizing: content-box
+  height: 0
 
 /**
  * Contain overflow in all browsers.
  */
 
 pre
-  overflow: auto;
+  overflow: auto
 
 /**
  * Address odd `em`-unit font size rendering in all browsers.
@@ -222,11 +222,11 @@ code,
 kbd,
 pre,
 samp
-  font-family: monospace, monospace;
-  font-size: 1em;
+  font-family: monospace, monospace
+  font-size: 1em
 
 /* Forms
-   ==========================================================================: */;
+   ==========================================================================: */
 
 /**
  * Known limitation: by default, Chrome and Safari on OS X allow very limited
@@ -235,7 +235,7 @@ samp
 
 /**
  * 1. Correct color not being inherited.
- *    Known issue: affects color of disabled: elements.;
+ *    Known issue: affects color of disabled: elements.
  * 2. Correct font properties not being inherited.
  * 3. Address margins set differently in Firefox 4+, Safari, and Chrome.
  */
@@ -245,16 +245,16 @@ input,
 optgroup,
 select,
 textarea
-  color: inherit /* 1: */;
-  font: inherit /* 2: */;
-  margin: 0 /* 3: */;
+  color: inherit /* 1: */
+  font: inherit /* 2: */
+  margin: 0 /* 3: */
 
 /**
  * Address `overflow` set to `hidden` in IE 8/9/10/11.
  */
 
 button
-  overflow: visible;
+  overflow: visible
 
 /**
  * Address inconsistent `text-transform` inheritance for `button` and `select`.
@@ -265,22 +265,22 @@ button
 
 button,
 select
-  text-transform: none;
+  text-transform: none
 
 /**
  * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
- *    and `video`: controls.;
+ *    and `video`: controls.
  * 2. Correct inability to style clickable `input` types in iOS.
  * 3. Improve usability and consistency of cursor style between image-type
- *    `input` and: others.;
+ *    `input` and: others.
  */
 
 button,
 html input[type="button"], /* 1 */
 input[type="reset"],
 input[type="submit"]
-  -webkit-appearance button /* 2: */;
-  cursor pointer /* 3: */;
+  -webkit-appearance button /* 2: */
+  cursor pointer /* 3: */
 
 /**
  * Re-set default cursor for disabled elements.
@@ -288,7 +288,7 @@ input[type="submit"]
 
 button[disabled],
 html input[disabled]
-  cursor: default;
+  cursor: default
 
 /**
  * Remove inner padding and border in Firefox 4+.
@@ -296,8 +296,8 @@ html input[disabled]
 
 button::-moz-focus-inner,
 input::-moz-focus-inner
-  border: 0;
-  padding: 0;
+  border: 0
+  padding: 0
 
 /**
  * Address Firefox 4+ setting `line-height` on `input` using `!important` in
@@ -305,7 +305,7 @@ input::-moz-focus-inner
  */
 
 input
-  line-height: normal;
+  line-height: normal
 
 /**
  * It's recommended that you don't attempt to style these elements.
@@ -317,8 +317,8 @@ input
 
 input[type="checkbox"],
 input[type="radio"]
-  box-sizing: border-box /* 1: */;
-  padding: 0 /* 2: */;
+  box-sizing: border-box /* 1: */
+  padding: 0 /* 2: */
 
 /**
  * Fix the cursor style for Chrome's increment/decrement buttons. For certain
@@ -328,7 +328,7 @@ input[type="radio"]
 
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button
-  height: auto;
+  height: auto
 
 /**
  * 1. Address `appearance` set to `searchfield` in Safari and Chrome.
@@ -336,8 +336,8 @@ input[type="number"]::-webkit-outer-spin-button
  */
 
 input[type="search"]
-  -webkit-appearance: textfield /* 1: */;
-  box-sizing: content-box /* 2: */;
+  -webkit-appearance: textfield /* 1: */
+  box-sizing: content-box /* 2: */
 
 /**
  * Remove inner padding and search cancel button in Safari and Chrome on OS X.
@@ -347,16 +347,16 @@ input[type="search"]
 
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration
-  -webkit-appearance: none;
+  -webkit-appearance: none
 
 /**
  * Define consistent border, margin, and padding.
  */
 
 fieldset
-  border: 1px solid #c0c0c0;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
+  border: 1px solid #c0c0c0
+  margin: 0 2px
+  padding: 0.35em 0.625em 0.75em
 
 /**
  * 1. Correct `color` not being inherited in IE 8/9/10/11.
@@ -364,15 +364,15 @@ fieldset
  */
 
 legend
-  border: 0 /* 1: */;
-  padding: 0 /* 2: */;
+  border: 0 /* 1: */
+  padding: 0 /* 2: */
 
 /**
  * Remove default vertical scrollbar in IE 8/9/10/11.
  */
 
 textarea
-  overflow: auto;
+  overflow: auto
 
 /**
  * Don't inherit the `font-weight` (applied by a rule above).
@@ -380,19 +380,19 @@ textarea
  */
 
 optgroup
-  font-weight: bold;
+  font-weight: bold
 
 /* Tables
-   ==========================================================================: */;
+   ==========================================================================: */
 
 /**
  * Remove most spacing between table cells.
  */
 
 table
-  border-collapse: collapse;
-  border-spacing: 0;
+  border-collapse: collapse
+  border-spacing: 0
 
 td,
 th
-  padding: 0;
+  padding: 0
