--- a/src/elements/form.styl
+++ b/src/elements/form.styl
@@ -22,45 +22,45 @@ input[type=tel],
 input[type=color],
 select,
 textarea
-  width: 100%;
-  outline: none;
-  display: block;
-  max-width: 100%;
-  background: #fff;
-  padding: .5em .8em;
-  border-radius: 3px;
-  margin-bottom: .75em;
-  border: 1px solid color['border-normal'];
+  width: 100%
+  outline: none
+  display: block
+  max-width: 100%
+  background: #fff
+  padding: .5em .8em
+  border-radius: 3px
+  margin-bottom: .75em
+  border: 1px solid color-border-normal
 
   &.disabled,
   &[disabled]
-    cursor: not-allowed;
-    color: #999;
-    border-color: #ddd;
-    background-color: #f9f9f9;
+    cursor: not-allowed
+    color: #999
+    border-color: #ddd
+    background-color: #f9f9f9
     
     &:active,
     &:focus
-      border-color: #ddd;
+      border-color: #ddd
 
   &:active,
   &:focus
-    border-color: color['border-normal'];
+    border-color: color-border-normal
 
 textarea
-  padding: .2em .8em;
+  padding: .2em .8em
 
 label,
 option
   &.disabled,
   &[disabled]
-    cursor: not-allowed;
-    color: #999;
-    border-color: #DDD;
-    background-color: #f9f9f9;
+    cursor: not-allowed
+    color: #999
+    border-color: #DDD
+    background-color: #f9f9f9
 
 label
-  margin-bottom: .2rem;
+  margin-bottom: .2rem
 
 .form-radius
   input,
@@ -69,44 +69,44 @@ label
   option,
   button,
   a.btn
-    border-radius: 5px;
+    border-radius: 5px
 
 .form-group
-  padding: 0;
-  border: 0;
-  margin-bottom: .25em;
+  padding: 0
+  border: 0
+  margin-bottom: .25em
 
   input
-    margin: 0;
-    border-bottom: 0;
-    border-radius: 3px;
+    margin: 0
+    border-bottom: 0
+    border-radius: 3px
 
     &:active,
     &:focus
-      margin-bottom: -1px;
-      position: relative;
-      border-bottom: 1px solid color['border-normal'];
+      margin-bottom: -1px
+      position: relative
+      border-bottom: 1px solid color-border-normal
 
     &:last-child
-      border-bottom: 1px solid color['border-normal'];
+      border-bottom: 1px solid color-border-normal
 
       &:active,
       &:focus
-        margin-bottom: 0;
-        border-bottom-color: color['border-focus'];
+        margin-bottom: 0
+        border-bottom-color: color-border-focus
 
   &.form-radius
     &:first-child
-      border-top-radius: 5px;
+      border-top-radius: 5px
 
     &:last-child
-      border-bottom-radius: 5px;
+      border-bottom-radius: 5px
 
 .form-radius.form-group,
 .form-radius .form-group
   input
     &:first-child
-      border-top-radius: 5px;
+      border-top-radius: 5px
 
     &:last-child
-      border-bottom-radius: 5px;
+      border-bottom-radius: 5px
