--- a/src/layout/grid.styl
+++ b/src/layout/grid.styl
@@ -10,48 +10,48 @@
   center()
   clearfix()
 
-  margin-top 1em
-  margin-left -1em
-  margin-right -1em
+  margin-top: 1em
+  margin-left: -1em
+  margin-right: -1em
 
 [class=grid-u]
-  float left
-  padding 0 1em
-  display inline
+  float: left
+  padding: 0 1em
+  display: inline
 
 .grid-u
   @media mq-normal
     for n in 1..12
       &.u-n{n}
-        width (n/12) * 100 + '%'
+        width: (n/12) * 100 + '%'
 
       &.u-ml-n{n}
-        margin-left (n/12) * 100 + '%'
+        margin-left: (n/12) * 100 + '%'
   
       // AVG Grid
       &.u-avg-n{n}
-        width (1/n) * 100 + '%'
+        width: (1/n) * 100 + '%'
   
   @media mq-tablet
     for n in 1..12
       &.u-t{n}
-        width (n/12) * 100 + '%'
+        width: (n/12) * 100 + '%'
 
       &.u-ml-t{n}
-        margin-left (n/12) * 100 + '%'
+        margin-left: (n/12) * 100 + '%'
   
       // AVG Grid
       &.u-avg-t{n}
-        width (1/n) * 100 + '%'
+        width: (1/n) * 100 + '%'
 
   @media mq-mobile
     for n in 1..12
       &.u-m{n}
-        width (n/12) * 100 + '%'
+        width: (n/12) * 100 + '%'
 
       &.u-ml-m{n}
-        margin-left (n/12) * 100 + '%'
+        margin-left: (n/12) * 100 + '%'
   
       // AVG Grid
       &.u-avg-m{n}
-        width (1/n) * 100 + '%'
+        width: (1/n) * 100 + '%'
