--- a/src/layout/typography.styl
+++ b/src/layout/typography.styl
@@ -7,7 +7,7 @@
 // ===============================================
 
 a
-  color: color['link'];
+  color: color-link
 
 h1,
 h2,
@@ -15,103 +15,103 @@ h3,
 h4,
 h5,
 h6
-  line-height: 1.625;
-  color: color['normal'];
+  line-height: 1.625
+  color: color-normal
 
 h1
-  margin-top: 0;
-  margin-bottom: .2em;
-  font-size: 2.6em;
+  margin-top: 0
+  margin-bottom: .2em
+  font-size: 2.6em
 
 h2
-  margin: .23em 0;
-  font-size: 2.15em;
+  margin: .23em 0
+  font-size: 2.15em
 
 h3
-  margin: .5em 0;
-  font-size: 1.7em;
+  margin: .5em 0
+  font-size: 1.7em
 
 h4
-  margin: .6em 0;
-  font-size: 1.25em;
+  margin: .6em 0
+  font-size: 1.25em
 
 h5
-  margin: 1em 0;
-  font-size: 1em;
+  margin: 1em 0
+  font-size: 1em
 
 h6
-  margin: 1.25em 0;
-  font-size: .85em;
+  margin: 1.25em 0
+  font-size: .85em
 
 .text-counter
-  counter-reset: titleh2 titleh3 titleh4 titleh5 titleh6;
+  counter-reset: ch2 ch3 ch4 ch5 ch6
 
   h1
-    text-align: center;
+    text-align: center
 
   h2
-    counter-reset: titleh3 titleh4 titleh5 titleh6;
+    counter-reset: ch3 ch4 ch5 ch6
 
     &:before
-      content: counter(titleh2) '\3000';
-      content: counter(titleh2, cjk-ideographic) '、';
-      counter-increment: titleh2;
+      content: counter(ch2) '\3000'
+      content: counter(ch2, cjk-ideographic) '、'
+      counter-increment: ch2
 
   h3
-      counter-reset: titleh4 titleh5 titleh6;
+      counter-reset: ch4 ch5 ch6
 
       &:before
-        content: counter(titleh2) '.' counter(titleh3) '\3000';
-        counter-increment: titleh3;
+        content: counter(ch2) '.' counter(ch3) '\3000'
+        counter-increment: ch3
 
   h4
-    counter-reset: titleh5 titleh6;
+    counter-reset: ch5 ch6
 
     &:before
-      content: counter(titleh2) '.' counter(titleh3) '.' counter(titleh4) '\3000';
-      counter-increment: titleh4;
+      content: counter(ch2) '.' counter(ch3) '.' counter(ch4) '\3000'
+      counter-increment: ch4
 
   h5
-    counter-reset: titleh6;
+    counter-reset: ch6
 
     &:before
-      content: counter(titleh2) '.' counter(titleh3) '.' counter(titleh4) '.' counter(titleh5) '\3000';
-      counter-increment: titleh5;
+      content: counter(ch2) '.' counter(ch3) '.' counter(ch4) '.' counter(ch5) '\3000'
+      counter-increment: ch5
 
   h6
     &:before
-      content: counter(titleh2) '.' counter(titleh3) '.' counter(titleh4) '.' counter(titleh5) '.' counter(titleh6) '\3000';
-      counter-increment: titleh6;
+      content: counter(ch2) '.' counter(ch3) '.' counter(ch4) '.' counter(ch5) '.' counter(ch6) '\3000'
+      counter-increment: ch6
 
   h6
-    font-weight: 500;
+    font-weight: 500
 
 p
-  margin-top: 0;
-  margin-bottom: 1em;
-  letter-spacing: .3px;
+  margin-top: 0
+  margin-bottom: 1em
+  letter-spacing: .3px
 
   &.text-author
-    display: block;
-    text-align: right;
-    font-weight: 800;
+    display: block
+    text-align: right
+    font-weight: 800
 
     &:before
-      content: '——' !important;
+      content: '——' !important
 
 .text-indent p:before
-  content: '\3000\3000';
-  display: inline;
+  content: '\3000\3000'
+  display: inline
 
 a
-  -moz-text-decoration-color: rgba(0, 0, 0, .6);
-  text-decoration-color: rgba(0, 0, 0, .6);
+  -moz-text-decoration-color: rgba(0, 0, 0, .6)
+  text-decoration-color: rgba(0, 0, 0, .6)
 
   img
-    border: 0;
+    border: 0
 
 img
-  max-width: 100%;
+  max-width: 100%
 
 // Symbol
 
@@ -119,148 +119,148 @@ b,
 em,
 cite,
 strong
-  color: color['normal'];
-  font-weight: 700;
+  color: color-normal
+  font-weight: 700
 
   a
-    color: color['normal'];
+    color: color-normal
 
 em,
 cite
-  font-style: normal;
+  font-style: normal
 
   a
-    font-style: normal;
+    font-style: normal
 
 em
-  font-style: inherit;
-  font-weight: inherit;
-  text-decoration: inherit;
-  -webkit-text-emphasis: filled circle;
-  -moz-text-emphasis: filled circle;
-  -ms-text-emphasis: filled circle;
-  text-emphasis: filled circle;
-  -webkit-text-emphasis-position: under;
-  -moz-text-emphasis-position: under;
-  -ms-text-emphasis-position: under;
-  text-emphasis-position: under;
+  font-style: inherit
+  font-weight: inherit
+  text-decoration: inherit
+  -webkit-text-emphasis: filled circle
+  -moz-text-emphasis: filled circle
+  -ms-text-emphasis: filled circle
+  text-emphasis: filled circle
+  -webkit-text-emphasis-position: under
+  -moz-text-emphasis-position: under
+  -ms-text-emphasis-position: under
+  text-emphasis-position: under
 
 i
-  color: color['normal'];
-  font-style: italic;
+  color: color-normal
+  font-style: italic
 
 img
-  margin: .2em 0;
+  margin: .2em 0
 
 sub,
 sup
   a
-    text-decoration: none;
+    text-decoration: none
 
 hr
-  width: 15%;
-  display: block;
-  border: 0 none;
-  margin: 2em auto;
-  border-top: 2px solid color['border-normal'];
+  width: 15%
+  display: block
+  border: 0 none
+  margin: 2em auto
+  border-top: 2px solid color-border-normal
 
 // List
 
 ul,
 ol
-  margin: 0 0 24px 6px;
-  padding-left: 24px;
+  margin: 0 0 24px 6px
+  padding-left: 24px
 
 ul
-  list-style-type: square;
+  list-style-type: square
 
 ol
-  list-style-type: decimal;
+  list-style-type: decimal
 
 li
-  margin-bottom: .2em;
+  margin-bottom: .2em
 
   ul,
   ol
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 14px;
+    margin-top: 0
+    margin-bottom: 0
+    margin-left: 14px
 
 ul li
   ul li
-    list-style-type: disc;
+    list-style-type: disc
 
     ul li
-      list-style-type: circle;
+      list-style-type: circle
 
 ol li
   ol li
-    list-style-type: upper-roman;
+    list-style-type: upper-roman
 
     ol li
-      list-style-type: lower-roman;
+      list-style-type: lower-roman
   p
-    margin: .4em 0 .6em;
+    margin: .4em 0 .6em
 
     &:before
-      content: none;
+      content: none
 
 // DT
 
 dl
-  margin-bottom: .2em;
+  margin-bottom: .2em
 
 dt
-  padding: 0;
-  font-weight: 800;
+  padding: 0
+  font-weight: 800
 
 dd
-  margin-left: 0;
+  margin-left: 0
 
 dt + dd
-  margin-top: .2em;
+  margin-top: .2em
 
 dd + dt
-  margin-top: .6em;
+  margin-top: .6em
 
 [draggable]
-  cursor: move;
+  cursor: move
 
 // Key Board Log
 kbd
-  color: #fff;
-  font-size: 90%;
-  padding: 2px 4px;
-  border-radius: 3px;
-  background-color: #333;
-  font-family: font-family['monospace'];
-  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .25);
+  color: #fff
+  font-size: 90%
+  padding: 2px 4px
+  border-radius: 3px
+  background-color: #333
+  font-family: font-family-monospace
+  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .25)
 
   kbd
-    padding: 0;
+    padding: 0
 
 // Figure
 
 figure
-  text-align: center;
+  text-align: center
 
   &.left,
   &.right
-    width: 50%;
+    width: 50%
 
   figcaption:after
-    content: '';
-    width: 15%;
-    display: block;
-    margin: 1em auto .2em;
-    color: color['dark-grey'];
-    border-bottom: 1px solid color['border-normal'];
+    content: ''
+    width: 15%
+    display: block
+    margin: 1em auto .2em
+    color: color-dark-grey
+    border-bottom: 1px solid color-border-normal
 
 @media mq-mobile
   figure
     &.left,
     &.right
-      width: 100%;
-      margin: 0;
-      padding: 1em 40px;
-      float: none!important;
+      width: 100%
+      margin: 0
+      padding: 1em 40px
+      float: none!important
