--- a/src/utillyties.styl
+++ b/src/utillyties.styl
@@ -9,21 +9,21 @@
 // Position
 
 .absolute
-  position: absolute;
+  position: absolute
 
 .relative
-  position: relative;
+  position: relative
 
 .fixed
-  position: fixed;
+  position: fixed
 
 // Float
 
 .left
-  float: left !important;
+  float: left !important
 
 .right
-  float: right !important;
+  float: right !important
 
 .clearfix
   clearfix()
@@ -36,44 +36,44 @@
 // Display
 
 .block
-  display: block !important;
+  display: block !important
 
 .inline
-  display: inline !important;
+  display: inline !important
 
 .inline-block
-  display: inline-block !important;
+  display: inline-block !important
 
 .hide
-  display: none !important;
-  visibility: hidden !important;
+  display: none !important
+  visibility: hidden !important
 
 // Font-family
 
 .serif
-  font-family: font-family['serif'];
+  font-family: font-family-serif
 
 .kai
-  font-family: font-family['kai'];
+  font-family: font-family-kai
 
 .monospace
-  font-family: font-family['monospace'];
+  font-family: font-family-monospace
 
 // Other
 
 .container
-  max-width: 80%;
+  max-width: 80%
 
   center()
   clearfix()
 
   @media mq-tablet
-    max-width: 92%;
+    max-width: 92%
 
   @media mq-mobile
-    max-width: 100%;
-    padding-left: 1em;
-    padding-right: 1em;
+    max-width: 100%
+    padding-left: 1em
+    padding-right: 1em
 
 .radius
-  border-radius: 5px;
+  border-radius: 5px
