Change default fonts #1

--- a/src/variables.styl
+++ b/src/variables.styl
@@ -6,10 +6,11 @@
 // MIT License                                  ||
 // ===============================================
 
-font-family-normal    = "Segoe UI", "Lucida Grande", Helvetica, Arial, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans","wenquanyi micro hei","Hiragino Sans GB", "Hiragino Sans GB W3", Arial, sans-serif'
-font-family-serif     = Georgia, "Times New Roman", Times, SimSun, serif'
-font-family-kai       = Georgia, "Times New Roman", Times, Kai, "Kaiti SC", KaiTi, BiauKai, serif
-font-family-monospace = "Source Code Pro", Monaco, Menlo, Consolas, "Courier New", monospace
+font-family-normal     = PingFang SC, Lantinghei SC, Microsoft Yahei, Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, sans
+font-family-sans-serif = PingFang SC, Verdana, Helvetica Neue, Microsoft Yahei, Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, sans-serif
+font-family-serif      = Georgia, "Times New Roman", Times, SimSun, serif
+font-family-kai        = Georgia, "Times New Roman", Times, Kai, "Kaiti SC", KaiTi, BiauKai, serif
+font-family-monospace  = "Source Code Pro", Monaco, Menlo, Consolas, "Courier New", monospace
 
 color-normal    = #222
 color-dark-grey = #888
