--- a/src/layout/typography.styl
+++ b/src/layout/typography.styl
@@ -6,8 +6,15 @@
 // MIT License                                  ||
 // ===============================================
 
-a
-  color: color-link
+body
+  font-size: 105%
+  font-weight: 400
+
+  color: color-normal
+  font-family: font-family-normal
+
+  -webkit-font-smoothing: antialiased
+  -moz-osx-font-smoothing: grayscale
 
 h1,
 h2,
@@ -89,8 +96,13 @@ h6
 
 p
   margin-top: 0
-  margin-bottom: 1em
+  margin-bottom: .5em
+
+  text-align: justify
+  text-justify: ideographic
   letter-spacing: .3px
+
+  word-break: break-all
 
   &.text-author
     display: block
@@ -105,6 +117,8 @@ p
   display: inline
 
 a
+  color: color-lin
+
   -moz-text-decoration-color: rgba(0, 0, 0, .6)
   text-decoration-color: rgba(0, 0, 0, .6)
 
