--- a/src/components/nav.styl
+++ b/src/components/nav.styl
@@ -6,7 +6,7 @@
 // MIT License                                                               ||
 // ============================================================================
 
-nav
+.nav
   width: 100%
   z-index: 1000
   background-color: rgba(0, 0, 0, .4)
@@ -16,10 +16,12 @@ nav
     top: 0
     left: 0
 
-  a 
-    line-height: 3rem
+  a
     color: #fff
+    line-height: 3rem
+
     text-decoration: none
+    transition: .3s ease
 
   a.nav-band
     font-weight: 600
@@ -34,7 +36,7 @@ nav
       float: left
       margin: 0
       list-style: none
-      
+
       a
         display: block
         padding: 0 1.5em
