--- a/src/elements/table.styl
+++ b/src/elements/table.styl
@@ -13,12 +13,12 @@
   border-spacing: 0
   border-collapse: separate
 
-  > thead,
-  > tbody,
-  > tfoot
-    > tr
-      > th,
-      > td
+  thead,
+  tbody,
+  tfoot
+    tr
+      th,
+      td
         padding: .7rem
         line-height: 1.6
         vertical-align: top
@@ -27,59 +27,56 @@
         &[scope="row"]
           color: color-gray
 
-  > thead
-    > tr
-      > th,
-      > td
+    tr.table-active
+      th,
+      td
+        border-left-color: color-border-mark !important
+        background-color: color-background-table-mark !important
+
+  thead
+    tr
+      th,
+      td
         color: color-gray
         border-top: 0
         vertical-align: bottom
         border-bottom: 1px solid color-border-light
 
-  > tbody + tbody
-    > tr:first-child
-      > td
+  tbody + tbody
+    tr:first-child
+      td
         border-top: 2px solid color-border-normal
 
   &.table-bordered
     border: 1px solid color-border-light
 
-    > thead,
-    > tbody,
-    > tfoot
-      > tr
-        > th,
-        > td
+    thead,
+    tbody,
+    tfoot
+      tr
+        th,
+        td
           border-left: 1px solid color-border-light
 
-        > th:first-child,
-        > td:first-child
+        th:first-child,
+        td:first-child
           border-left: 0
 
   &.table-striped
-    > tbody
-      > tr:nth-child(odd)
-        > th,
-        > td
+    tbody
+      tr:nth-child(odd)
+        th,
+        td
           background-color: color-background-table
 
   &.table-hover
-    > tbody
-      > tr:hover
-        > th,
-        > td
+    tbody
+      tr:hover
+        th,
+        td
           background-color: color-background-table-hover
 
   &.table-center
     th,
     td
       text-align: center
-
-  > thead,
-  > tbody,
-  > tfoot
-    > tr.table-active
-      > th,
-      > td
-        border-left-color: color-border-mark !important
-        background-color: color-background-table-mark !important
