--- a/src/layout/typography.styl
+++ b/src/layout/typography.styl
@@ -119,7 +119,7 @@ p
   display: inline
 
 a
-  color: color-lin
+  color: color-link
 
   -moz-text-decoration-color: rgba(0, 0, 0, .6)
   text-decoration-color: rgba(0, 0, 0, .6)
