--- a/src/components/nav.styl
+++ b/src/components/nav.styl
@@ -21,7 +21,6 @@
     line-height: 3rem
 
     text-decoration: none
-    transition: .3s ease
 
   a.nav-band
     font-weight: 600
@@ -36,6 +35,7 @@
       float: left
       margin: 0
       list-style: none
+      transition: .3s ease;
 
       a
         display: block
