--- a/src/components/card.styl
+++ b/src/components/card.styl
@@ -6,6 +6,8 @@
 // MIT License                                  ||
 // ===============================================
 
+@import "../variables"
+
 .card
   padding: 0
   background: #fff
