--- a/src/elements/code.styl
+++ b/src/elements/code.styl
@@ -6,6 +6,8 @@
 // MIT License                                  ||
 // ===============================================
 
+@import "../variables"
+
 tt,
 code,
 pre
