--- a/src/layout/typography.styl
+++ b/src/layout/typography.styl
@@ -6,6 +6,8 @@
 // MIT License                                  ||
 // ===============================================
 
+@import "../variables"
+
 body
   font-size: 105%
   font-weight: 400
