--- a/src/components/acommet.styl
+++ b/src/components/acommet.styl
@@ -6,6 +6,8 @@
 // MIT License                                  ||
 // ===============================================
 
+@import "../variables"
+
 .acommets
   position: relative
 
