--- a/src/components/poem.styl
+++ b/src/components/poem.styl
@@ -6,6 +6,8 @@
 // MIT License                                  ||
 // ===============================================
 
+@import "../variables"
+
 // Horizontal Poem
 // ==============================================
 
