--- a/src/elements/form.styl
+++ b/src/elements/form.styl
@@ -6,6 +6,9 @@
 // MIT License                                  ||
 // ===============================================
 
+@import "../variables"
+@import "../mixins/common"
+
 input[type=text],
 input[type=password],
 input[type=email],
