--- a/src/elements/table.styl
+++ b/src/elements/table.styl
@@ -6,6 +6,8 @@
 // MIT License                                  ||
 // ===============================================
 
+@import "../variables"
+
 .table
   width: 100%
   font-size: .9em
