--- a/src/elements/button.styl
+++ b/src/elements/button.styl
@@ -30,21 +30,27 @@
   &.btn-ghost
     color: #fff
     box-shadow: none
-    border: 1px solid
+
+    border: 2px solid
     background-color: transparent
+
+    border-radius: 3px
+
     text-shadow: 1px 1px 0 rgba(0, 0, 0, .6)
     box-shadow: inset 0px 0px 2px rgba(0, 0, 0, .6)
 
     &.hover,
     &:hover
       color: #fff
-      border: 1px solid
+
+      border: 2px solid
       background-color: rgba(0, 0, 0, .3)
 
     &.active,
     &:active
       color: #fff
-      border: 1px solid
+
+      border: 2px solid
       background-color: rgba(0, 0, 0, .6)
 
     &:visited
