--- a/src/layout/typography.styl
+++ b/src/layout/typography.styl
@@ -27,33 +27,27 @@ h6
   font-weight: 100
   line-height: 1.625
 
+  margin-top: 1.2em
+  margin-bottom: .6em
+
   color: color-normal
   font-family: font-family-sans-serif
 
 h1
-  margin-top: 0
-  margin-bottom: .2em
-  font-size: 2.6em
+  font-size: 2em
 
 h2
-  margin: .23em 0
-  font-size: 2.15em
+  font-size: 1.8em
 
 h3
-  margin: .5em 0
-  font-size: 1.7em
+  font-size: 1.6em
 
 h4
-  margin: .6em 0
-  font-size: 1.25em
+  font-size: 1.2em
 
-h5
-  margin: 1em 0
-  font-size: 1em
-
+h5,
 h6
-  margin: 1.25em 0
-  font-size: .85em
+  font-size: 1em
 
 .text-counter
   counter-reset: ch2 ch3 ch4 ch5 ch6
@@ -102,6 +96,8 @@ p
   margin-top: 0
   margin-bottom: .5em
 
+  line-height: 1.88
+
   text-align: justify
   text-justify: ideographic
   letter-spacing: .3px
@@ -142,7 +138,7 @@ strong
   font-weight: 700
 
   a
-    color: color-normal
+    color: inherit
 
 em,
 cite
@@ -177,11 +173,16 @@ sup
     text-decoration: none
 
 hr
-  width: 15%
+  width: 20%
   display: block
   border: 0 none
   margin: 2em auto
   border-top: 2px solid color-border-normal
+
+abbr[title],
+dfn[title]
+  cursor: help
+  border-bottom: 1px dotted
 
 // List
 
