--- a/src/elements/table.styl
+++ b/src/elements/table.styl
@@ -8,12 +8,13 @@
 
 @import "../variables"
 
-.table
-  width: 100%
-  font-size: .9em
+table
   margin-bottom: 1.5em
   border-spacing: 0
   border-collapse: separate
+
+  &.table
+    width: 100%
 
   thead,
   tbody,
@@ -49,6 +50,7 @@
       td
         border-top: 2px solid color-border-normal
 
+.table
   &.table-bordered
     border: 1px solid color-border-light
 
