Use require instead of import

--- a/src/elements/button.styl
+++ b/src/elements/button.styl
@@ -6,26 +6,26 @@
 // MIT License                                  ||
 // ===============================================
 
-@import "../variables"
-@import "../mixins/button"
+@require "../variables"
+@require "../mixins/button"
 
 .btn
-  Btn: #fff color-normal
+  makeBtn: #fff color-normal
 
   &.btn-primary
-    BtnColor: color-primary #fff
+    btnColor: color-primary #fff
 
   &.btn-secondary
-    BtnColor: color-secondary #fff
+    btnColor: color-secondary #fff
 
   &.btn-success
-    BtnColor: color-success #fff
+    btnColor: color-success #fff
 
   &.btn-error
-    BtnColor: color-error #fff
+    btnColor: color-error #fff
 
   &.btn-warning
-    BtnColor: color-warning #fff
+    btnColor: color-warning #fff
 
   &.btn-ghost
     color: #fff
