--- a/src/elements/table.styl
+++ b/src/elements/table.styl
@@ -6,7 +6,7 @@
 // MIT License                                  ||
 // ===============================================
 
-@import "../variables"
+@require "../variables"
 
 table
   margin-bottom: 1.5em
