--- a/src/fonts/foundation.styl
+++ b/src/fonts/foundation.styl
@@ -11,7 +11,7 @@
  * MIT License
  */
 
-@import "../mixins/common"
+@require "../mixins/common"
 
 // fi-path = "//dn-staticfile.qbox.me/foundicons/3.0.0/"
 fi-path = "./fonts/"
