--- a/src/utillyties.styl
+++ b/src/utillyties.styl
@@ -6,8 +6,8 @@
 // MIT License                                  ||
 // ===============================================
 
-@import "variables"
-@import "mixins/common"
+@require "variables"
+@require "mixins/common"
 
 // Position
 
