--- a/src/components/acommet.styl
+++ b/src/components/acommet.styl
@@ -6,7 +6,7 @@
 // MIT License                                  ||
 // ===============================================
 
-@import "../variables"
+@require "../variables"
 
 .acommets
   position: relative
