--- a/src/components/card.styl
+++ b/src/components/card.styl
@@ -6,7 +6,7 @@
 // MIT License                                  ||
 // ===============================================
 
-@import "../variables"
+@require "../variables"
 
 .card
   padding: 0
