--- a/src/elements/form.styl
+++ b/src/elements/form.styl
@@ -6,8 +6,8 @@
 // MIT License                                  ||
 // ===============================================
 
-@import "../variables"
-@import "../mixins/common"
+@require "../variables"
+@require "../mixins/common"
 
 input[type=text],
 input[type=password],
