--- a/src/typography/figure.styl
+++ b/src/typography/figure.styl
@@ -6,7 +6,7 @@
 // MIT License                                  ||
 // ===============================================
 
-@import "../variables"
+@require "../variables"
 
 figure
   text-align: center
