--- a/src/typography/title.styl
+++ b/src/typography/title.styl
@@ -6,7 +6,7 @@
 // MIT License                                  ||
 // ===============================================
 
-@import "../variables"
+@require "../variables"
 
 h1,
 h2,
