--- a/src/typography/typography.styl
+++ b/src/typography/typography.styl
@@ -6,7 +6,7 @@
 // MIT License                                  ||
 // ===============================================
 
-@import "../variables"
+@require "../variables"
 
 body
   font-size: 105%
