--- a/src/mixins/box.styl
+++ b/src/mixins/box.styl
@@ -1,40 +1,10 @@
 // ===============================================
-// Mixins / Common.styl                         ||
+// Mixins / Box.styl                            ||
 //                                              ||
 // =============================================||
 // Copyright 2015 @ Rakume<i@fake.moe>          ||
 // MIT License                                  ||
 // ===============================================
-
-// CSS 3
-// -----------------------------------------------------------------------------
-
-@keyframes spin
-  0%
-    transform rotate(0deg)
-
-  100%
-    transform rotate(360deg)
-
-// Border Radius
-
-border-top-radius(n)
-  border-radius n n 0 0
-
-border-right-radius(n)
-  border-radius 0 n n 0
-
-border-bottom-radius(n)
-  border-radius 0 0 n n
-
-border-left-radius(n)
-  border-radius n 0 0 n
-
-spin(v)
-  animation spin v infinite linear
-
-// Box
-// -----------------------------------------------------------------------------
 
 // Float
 
