Fix building error

--- a/src/elements/form.styl
+++ b/src/elements/form.styl
@@ -7,7 +7,7 @@
 // ===============================================
 
 @require "../variables"
-@require "../mixins/common"
+@require "../mixins/box"
 
 input[type=text],
 input[type=password],
