--- a/src/layout/grid.styl
+++ b/src/layout/grid.styl
@@ -7,7 +7,7 @@
 // ===============================================
 
 @require "../variables"
-@require "../mixins/common"
+@require "../mixins/box"
 @require "../mixins/grid"
 
 .grid
