--- a/src/typography/poem.styl
+++ b/src/typography/poem.styl
@@ -38,10 +38,9 @@
   white-space: pre-line
   margin: 2em auto
   line-height: 1.4em
-  letter-spacing: 3px
 
-  -webkit-writing-mode: vertical-rl
-          writing-mode: vertical-rl
+  -webkit-writing-mode: vertical-lr
+  writing-mode: vertical-lr
 
   h1,
   h2,
@@ -61,9 +60,6 @@
     .poem-author
       font-size: 60%
 
-  q
-    quote: "\300c" "\300d" "\300e" "\300f" "\300c" "\300d" "\300e" "\300f" "\300c" "\300d" "\300e" "\300f"
-
   p
     margin: 0 -.3em
     text-align: left
@@ -77,5 +73,5 @@
       content: none
 
 .poem-vertical-left
-  writing-mode: vertical-lr
   -webkit-writing-mode: vertical-lr
+  writing-mode: vertical-lr
