--- a/src/typography/quote.styl
+++ b/src/typography/quote.styl
@@ -7,10 +7,14 @@
 // ===============================================
 
 q
-  &,
-  &:lang(en),
+  &
+  &:lang(en)
   &:lang(zh-CN)
     quote: "\201c" "\201d" "\2018" "\2019" "\201c" "\201d" "\2018" "\2019" "\201c" "\201d" "\2018" "\2019"
 
-  &:lang(zh)
+.poem-vertical-left:lang(zh) q
+.poem-vertical-left:lang(zh-CN) q
+.poem-vertical-right:lang(zh) q
+.poem-vertical-right:lang(zh-CN) q
+q:lang(zh)
     quote: "\300c" "\300d" "\300e" "\300f" "\300c" "\300d" "\300e" "\300f" "\300c" "\300d" "\300e" "\300f"
