--- a/src/utillyties.styl
+++ b/src/utillyties.styl
@@ -7,7 +7,7 @@
 // ===============================================
 
 @require "variables"
-@require "mixins/common"
+@require "mixins/box"
 
 // Position
 
