Optimize detail of typography

--- a/src/normalize.styl
+++ b/src/normalize.styl
@@ -84,10 +84,12 @@ template
 
 /**
  * Remove the gray background color from active links in IE 10.
+ * Remove underline
  */
 
 a
   background-color: transparent
+  text-decoration: none
 
 /**
  * Improve readability of focused elements when they are also in an
