--- a/src/typography/list.styl
+++ b/src/typography/list.styl
@@ -8,8 +8,10 @@
 
 ul,
 ol
-  margin: 0 0 24px 6px
-  padding-left: 24px
+  margin: 0 0 2em .4em
+  padding-left: 2em
+
+  line-height: 1.88
 
 ul
   list-style-type: square
