--- a/src/elements/code.styl
+++ b/src/elements/code.styl
@@ -8,12 +8,12 @@
 
 @require "../variables"
 
-tt,
-code,
+tt
+code
 pre
   font-family: font-family-monospace
 
-tt,
+tt
 code
   font-size: .8em
 
@@ -45,7 +45,7 @@ pre
   &:hover
     border-left-color: color-border-focus
 
-  code,
+  code
   tt
     padding: 0
     border: none
@@ -62,15 +62,11 @@ blockquote
   color: color-dark-grey
   border-left: 2px solid color-border-normal
 
-  small
-    color: color-link-grey
-    display: block
-    text-align: right
-
   a
     color: color-link-grey
 
   p
     margin-bottom: .5em
+
     &:last-child
       margin-bottom: 0
