Fix text-emphasis-position, add mark #1

--- a/src/elements/code.styl
+++ b/src/elements/code.styl
@@ -54,9 +54,8 @@ pre
 
 blockquote
   padding: 0 1.3em
-  margin: 0 -1.3em 1.6em -1.3em
+  margin: 1em -1.3em 0
 
-  font-size: .9rem
   line-height: 1.62
 
   color: color-dark-grey
@@ -70,3 +69,12 @@ blockquote
 
     &:last-child
       margin-bottom: 0
+
+  b
+  em
+  cite
+  strong
+    color: #777
+
+  & + p
+    margin-top: 1em
