--- a/src/typography/typography.styl
+++ b/src/typography/typography.styl
@@ -78,7 +78,12 @@ em
   font-weight: inherit
   text-decoration: inherit
 
+  -webkit-text-emphasis: filled circle
+  -moz-text-emphasis: filled circle
   text-emphasis: filled circle
+
+  -webkit-text-emphasis-position: under
+  -moz-text-emphasis-position: under
   text-emphasis-position: under
 
 i
@@ -104,8 +109,6 @@ dfn[title]
   cursor: help
   border-bottom: 1px dotted
 
-// DT
-
 dl
   margin-bottom: .2em
 
@@ -125,7 +128,12 @@ dd + dt
 [draggable]
   cursor: move
 
-// Key Board Log
+mark
+  color: color-normal
+
+  background: #FFFCC4
+  border-bottom: 1px solid #ffedce
+
 kbd
   color: #fff
   font-size: 90%
