Change line-height of body and titles

--- a/src/typography/figure.styl
+++ b/src/typography/figure.styl
@@ -15,7 +15,11 @@ figure
   &.right
     width: 50%
 
-  figcaption::after
+figcaption
+  font-size: 80%
+  margin-top: .5em
+
+  &::after
     content: ""
     width: 15%
 
