--- a/src/typography/list.styl
+++ b/src/typography/list.styl
@@ -6,12 +6,12 @@
 // MIT License                                  ||
 // ===============================================
 
-ul,
+ul
 ol
   margin: 0 0 2em .4em
   padding-left: 2em
 
-  line-height: 1.88
+  line-height: 1.62
 
 ul
   list-style-type: square
@@ -22,7 +22,7 @@ ol
 li
   margin-bottom: .2em
 
-  ul,
+  ul
   ol
     margin-top: 0
     margin-bottom: 0
@@ -41,6 +41,7 @@ ol li
 
     ol li
       list-style-type: lower-roman
+
   p
     margin: .4em 0 .6em
 
