--- a/src/typography/title.styl
+++ b/src/typography/title.styl
@@ -8,11 +8,11 @@
 
 @require "../variables"
 
-h1,
-h2,
-h3,
-h4,
-h5,
+h1
+h2
+h3
+h4
+h5
 h6
   margin-top: 1.2em
   margin-bottom: .6em
@@ -38,12 +38,13 @@ h2
   font-size: 1.8em
 
 h3
-  font-size: 1.6em
+  font-size: 1.5em
 
 h4
+  font-weight: bold
   font-size: 1.2em
 
-h5,
+h5
 h6
   font-size: 1em
   font-weight: bold
