Add text-decoration back to link

--- a/src/typography/typography.styl
+++ b/src/typography/typography.styl
@@ -44,8 +44,7 @@ p
 a
   color: color-link
 
-  -moz-text-decoration-color: rgba(0, 0, 0, .6)
-  text-decoration-color: rgba(0, 0, 0, .6)
+  text-decoration-color: rgba(0, 0, 0, .4)
 
   img
     border: 0
@@ -55,9 +54,9 @@ img
 
 // Symbol
 
-b,
-em,
-cite,
+b
+em
+cite
 strong
   color: color-normal
   font-weight: 700
@@ -65,7 +64,7 @@ strong
   a
     color: inherit
 
-em,
+em
 cite
   font-style: normal
 
@@ -103,7 +102,7 @@ hr
   margin: 2em auto
   border-top: 2px solid color-border-normal
 
-abbr[title],
+abbr[title]
 dfn[title]
   cursor: help
   border-bottom: 1px dotted
