Typography: Fix text-counter doesn't work

--- a/src/typography/zh-cn/counter.styl
+++ b/src/typography/zh-cn/counter.styl
@@ -16,7 +16,7 @@
     h2
       counter-reset: ch3 ch4 ch5 ch6
 
-      &:::before
+      &::before
         content: counter(ch2) '\3000'
         content: counter(ch2, cjk-ideographic) '、'
         counter-increment: ch2
