--- a/src/typography/title.styl
+++ b/src/typography/title.styl
@@ -14,8 +14,6 @@ h3
 h4
 h5
 h6
-  margin-top: 1.2em
-  margin-bottom: .6em
   font-weight: normal
 
   color: color-normal
@@ -27,24 +25,34 @@ h6
 
   + hr
     width: 100%
-
     border-top-width: 1px
+
     margin-top: 0
 
 h1
-  font-size: 2em
+  font-size: 2.5em
+
+  margin .6em 0 .4em
 
 h2
   font-size: 1.8em
 
+  margin: .8em 0 .5em
+
 h3
   font-size: 1.5em
+
+  margin: .7em 0
 
 h4
   font-weight: bold
   font-size: 1.2em
 
+  margin: 1em 0
+
 h5
 h6
   font-size: 1em
   font-weight: bold
+
+  margin: 1em 0
