Typography: Optimize line-height of h4 and h5, h6

--- a/src/typography/title.styl
+++ b/src/typography/title.styl
@@ -47,6 +47,7 @@ h3
 h4
   font-weight: bold
   font-size: 1.2em
+  line-height: 1.5
 
   margin: 1em 0
 
@@ -54,5 +55,6 @@ h5
 h6
   font-size: 1em
   font-weight: bold
+  line-height: 1.86
 
   margin: 1em 0
