--- a/src/typography/zh-cn/counter.styl
+++ b/src/typography/zh-cn/counter.styl
@@ -8,17 +8,21 @@
 
 .text-counter
   &:lang(zh)
-    counter-reset: ch2 ch3 ch4 ch5 ch6
+    counter-reset: ch1 ch2 ch3 ch4 ch5 ch6
 
     h1
-      text-align: center
+      counter-reset: ch2 ch3 ch4 ch5 ch6
+
+      &::before
+        content: counter(ch1) '\3000'
+        content: counter(ch1, cjk-ideographic) '、'
+        counter-increment: ch1
 
     h2
       counter-reset: ch3 ch4 ch5 ch6
 
       &::before
-        content: counter(ch2) '\3000'
-        content: counter(ch2, cjk-ideographic) '、'
+        content: counter(ch1) '.' counter(ch2) '\3000'
         counter-increment: ch2
 
     h3
