Typography: Fix the dir of file

--- a/src/typography/zh-cn/counter.styl
+++ b/src/typography/zh-cn/counter.styl
@@ -1,5 +1,5 @@
 // ===============================================
-// Typograhpy / Counter.styl                    ||
+// Typograhpy / zh-CN / Counter.styl            ||
 //                                              ||
 // =============================================||
 // Copyright 2015 @ Rakume<i@fake.moe>          ||
