Typography: Add support of zh-Hant and better the font-family

--- a/src/typography/typography.styl
+++ b/src/typography/typography.styl
@@ -8,6 +8,11 @@
 
 @require "../variables"
 
+*:lang(zh-Latn),
+*:lang(ja-Latn),
+*:not(:lang(zh)):not(:lang(ja))
+  font-family: font-family-sans-serif
+
 body
   font-weight: 400
 
