--- a/src/typography/zh/counter.styl
+++ b/src/typography/zh/counter.styl
@@ -1,5 +1,5 @@
 // ===============================================
-// Typograhpy / zh-CN / Counter.styl            ||
+// Typograhpy / zh / Counter.styl               ||
 //                                              ||
 // =============================================||
 // Copyright 2015 @ Rakume<i@fake.moe>          ||
