--- a/src/variables.styl
+++ b/src/variables.styl
@@ -6,11 +6,19 @@
 // MIT License                                  ||
 // ===============================================
 
-font-family-normal     = PingFang SC, Lantinghei SC, Microsoft Yahei, Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, sans
-font-family-sans-serif = PingFang SC, Verdana, Helvetica Neue, Microsoft Yahei, Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, sans-serif
-font-family-serif      = Georgia, "Times New Roman", Times, SimSun, serif
-font-family-kai        = Georgia, "Times New Roman", Times, Kai, "Kaiti SC", KaiTi, BiauKai, serif
-font-family-monospace  = "Source Code Pro", Monaco, Menlo, Consolas, "Courier New", monospace
+font-family-sans-serif = 'Biaodian Pro Sans GB', 'Helvetica Neue', Helvetica, Arial, 'Han Heiti GB', sans-serif
+font-family-serif      = 'Numeral LF Serif', Georgia, 'Times New Roman', 'Han Kaiti', Times, SimSun, serif
+font-family-kai        = 'Numeral LF Serif', Georgia, 'Times New Roman', Times, 'Zhuyin Kaiti', Kai, 'Kaiti SC', KaiTi, BiauKai, cursive, serif
+font-family-monospace  = 'Source Code Pro', Monaco, Menlo, Consolas, 'Courier New', monospace
+
+font-family-normal = font-family-sans-serif
+
+font-family-zh-CN-serif        = 'Biaodian Pro Serif GB', font-family-serif
+font-family-zh-CN-sans-serif   = 'Biaodian Pro Sans GB', 'Helvetica Neue', Helvetica, Arial, 'Han Heiti GB', sans-serif
+font-faimly-zh-CN-monospace    = 'Biaodian Pro Sans GB', font-family-monospace
+font-family-zh-Hant-serif      = 'Biaodian Pro Serif', font-family-serif
+font-family-zh-Hant-sans-serif = 'Biaodian Pro Sans CNS', 'Helvetica Neue', Helvetica, Arial, 'Zhuyin Heiti', 'Han Heiti', sans-serif
+font-family-zh-Hant-monospace  = 'Biaodian pro Sans CNS', font-family-monospace
 
 color-normal    = #333
 color-dark-grey = #888
