Typography: Add support of japanese

--- a/src/variables.styl
+++ b/src/variables.styl
@@ -10,9 +10,11 @@ font-family-sans-serif = 'Biaodian Pro Sans GB', 'Helvetica Neue', Helvetica, Ar
 font-family-serif      = 'Numeral LF Serif', Georgia, 'Times New Roman', 'Han Kaiti', Times, SimSun, serif
 font-family-kai        = 'Numeral LF Serif', Georgia, 'Times New Roman', Times, 'Zhuyin Kaiti', Kai, 'Kaiti SC', KaiTi, BiauKai, cursive, serif
 font-family-monospace  = 'Source Code Pro', Monaco, Menlo, Consolas, 'Courier New', monospace
-
 font-family-normal = font-family-sans-serif
 
+font-family-ja-serif           = 'Yakumono Sans', font-family-serif
+font-family-ja-sans-serif      = 'Yakumono Sans', font-family-sans-serif
+font-family-ja-monospace       = 'Yakumono Sans', font-family-monospace
 font-family-zh-CN-serif        = 'Biaodian Pro Serif GB', font-family-serif
 font-family-zh-CN-sans-serif   = 'Biaodian Pro Sans GB', 'Helvetica Neue', Helvetica, Arial, 'Han Heiti GB', sans-serif
 font-faimly-zh-CN-monospace    = 'Biaodian Pro Sans GB', font-family-monospace
