File: fix filename

--- a/sass/utilities.scss
+++ b/sass/utilities.scss
@@ -1,5 +1,5 @@
 // ================================================
-// Utillyties.scss                               ||
+// Utilities.scss                                ||
 //                                               ||
 // ============================================= ||
 // Copyright 2015 @ Rakume<i@fake.moe>           ||
