--- a/src/utilities.styl
+++ b/src/utilities.styl
@@ -1,5 +1,5 @@
 // ===============================================
-// Utillyties.styl                              ||
+// Utilities.styl                               ||
 //                                              ||
 // =============================================||
 // Copyright 2015 @ Rakume<i@fake.moe>          ||
