Gulp: Fix buiding failed

--- a/sass/lutachu.scss
+++ b/sass/lutachu.scss
@@ -36,5 +36,5 @@
 @import "components/msg";
 @import "components/nav";
 
-@import "utillyties"; // Utillyties
+@import "utilities";
 @import "base/print"; // @media Print
