Button: Color of buttons is more beautiful

--- a/src/variables.styl
+++ b/src/variables.styl
@@ -28,10 +28,10 @@ color-link      = #111
 color-link-grey = #bbb
 
 color-primary   = #198ac8
-color-secondary = #4eb3e9
-color-success   = #19c856
-color-error     = #e63752
-color-warning   = #e8cB2c
+color-secondary = #16cbdf
+color-success   = #19c870
+color-error     = #c8192a
+color-warning   = #e0ca00
 
 color-background-bar   = #f7f7f7
 color-background-code  = #f7f7f7
